--- a/assets/angular/routes/phone/phone.html
+++ b/assets/angular/routes/phone/phone.html
@@ -1,6 +1,6 @@
 <div id="intro">
 
-    <div id="ios-statusbar">
+    <!-- <div id="ios-statusbar">
         <svg x="0px" y="0px" preserveAspectRatio="xMinYMin meet" width="100%" height="100%" viewBox="0 0 640 40" enable-background="new 0 0 640 40">
         <path id="battery_x5F_icon_x5F_indicator" fill="#FFFFFF" d="M622,11h-39c-1.189,0-3,1.795-3,3v13c0,1.034,1.871,3,3,3h39
             c1.145,0,3-1.825,3-3V14C625,12.827,623.094,11,622,11z M624,27c0,0.793-1.196,2-2,2h-39c-0.793,0-2-1.197-2-2V14
@@ -24,14 +24,14 @@
             C80,17.462,77.538,15,74.5,15z M74.5,25c-2.485,0-4.5-2.015-4.5-4.5c0-2.485,2.015-4.5,4.5-4.5c2.485,0,4.5,2.015,4.5,4.5
             C79,22.985,76.985,25,74.5,25z"/>
         </svg>
-    </div>
+    </div> -->
 
     <div class="carousel"></div>
 
-    <div id="backdrop">
+    <!-- <div id="backdrop">
         <video autoplay loop muted>
             <source ng-if="showVideo" src="/videos/intro-back.mp4" />
         </video>
-    </div>
+    </div> -->
 
 </div>
